--- a/build.gradle
+++ b/build.gradle
@@ -230,6 +230,7 @@ task('cucumber-reporting') {
 }
 
 dependencies {
+    compile 'org.apache.commons:commons-csv:1.5'
     compile 'org.apache.pdfbox:pdfbox:2.0.7'
     compile 'com.jayway.restassured:rest-assured:2.9.0'
     compile "junit:junit:$junitVersion"
