--- a/build.gradle
+++ b/build.gradle
@@ -108,46 +108,30 @@ task('testsuite') {
         }
 
         try {
-            if (project.hasProperty("parallel") && parallel == "true") {
-                javaexec {
-                    main = 'org.junit.runner.JUnitCore'
-                    classpath = configurations.cucumberRuntime + sourceSets.main.output
-                    args = ['uk.gov.dvsa.mot.runner.CourgetteJUnitRunner']
-
-                    systemProperties = ['cucumber.options': '--tags ' + tag]
-
-                    if (project.hasProperty('target_config')) {
-                        systemProperty "target_config", target_config
-                    } else if(project.hasProperty('configuration')) {
-                        systemProperty "configuration", configuration
-                    }
+            javaexec {
+                args = cucumberOptions
+                if (project.hasProperty('tag')) {
+                    args += ['--tags', tag, 'src/main/resources/features']
                 }
-            } else {
-                javaexec {
-                    args = cucumberOptions
-                    if (project.hasProperty('tag')) {
-                        args += ['--tags', tag, 'src/main/resources/features']
-                    }
 
-                    if (project.hasProperty('feature')) {
-                        args += ['src/main/resources/features/' + feature]
-                    } else {
-                        args += ['src/main/resources/features/']
-                    }
-
-                    if (project.hasProperty('scenario')) {
-                        args += ['--name', scenario]
-                    }
-
-                    if (project.hasProperty('target_config')) {
-                        systemProperty "target_config", target_config
-                    } else if(project.hasProperty('configuration')) {
-                        systemProperty "configuration", configuration
-                    }
-
-                    main = "cucumber.api.cli.Main"
-                    classpath = configurations.cucumberRuntime + sourceSets.main.output
+                if (project.hasProperty('feature')) {
+                    args += ['src/main/resources/features/' + feature]
+                } else {
+                    args += ['src/main/resources/features/']
                 }
+
+                if (project.hasProperty('scenario')) {
+                    args += ['--name', scenario]
+                }
+
+                if (project.hasProperty('target_config')) {
+                    systemProperty "target_config", target_config
+                } else if(project.hasProperty('configuration')) {
+                    systemProperty "configuration", configuration
+                }
+
+                main = "cucumber.api.cli.Main"
+                classpath = configurations.cucumberRuntime + sourceSets.main.output
             }
         } finally {
             javaexec {
@@ -158,6 +142,7 @@ task('testsuite') {
                     systemProperty "configuration", configuration
                 }
             }
+
 
             //This will be used to provide a config //.properties// file to use when running the testsuite locally.
             if (project.hasProperty('target_config')) {
@@ -233,19 +218,51 @@ task('cucumber-rerun') {
     }
 }
 
-task('run-server') {
-    description 'Use to test/debug the data server'
+task('parallel') {
+    description 'Runs all features matching the tag(s) (specified using -Ptag=...) in parallel'
     dependsOn assemble, compileJava, check
     doLast {
+        if (!project.hasProperty('tag')) {
+            throw new GradleException('tag parameter must be defined')
+        }
+        copy {
+            into "build/server-libs"
+            from configurations.serverRuntime + sourceSets.server.output
+        }
         javaexec {
-            main = 'uk.gov.dvsa.mot.server.ServerApplication'
-            classpath = configurations.serverRuntime + sourceSets.server.output
+            main = 'uk.gov.dvsa.mot.runner.StartDataServer'
+            classpath = configurations.cucumberRuntime + sourceSets.main.output
+        }
+        try {
+            javaexec {
+                main = 'org.junit.runner.JUnitCore'
+                classpath = configurations.cucumberRuntime + sourceSets.main.output
+                args = ['uk.gov.dvsa.mot.runner.CourgetteJUnitRunner']
+
+                // Cucumber configuration
+                systemProperties = ['cucumber.options': '--tags ' + tag]
+            }
+        } finally {
+            javaexec {
+                main = "uk.gov.dvsa.mot.reporting.CucumberReporting"
+                classpath = configurations.cucumberRuntime + sourceSets.main.output
+
+                if(project.hasProperty('configuration')) {
+                    systemProperty "configuration", configuration
+                }
+            }
+
+            javaexec {
+                main = 'uk.gov.dvsa.mot.runner.StopDataServer'
+                classpath = configurations.cucumberRuntime + sourceSets.main.output
+                ignoreExitValue = true
+            }
         }
     }
 }
 
 
-task('start') {
+task('start-server') {
     description 'Use to test/debug the data server'
     dependsOn assemble, compileJava, check
     doLast {
